# codeatlas

./: .gitattributes  .gitignore  LICENSE  README.md  codeatlas.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
action/: README.md  action.yml
examples/java-demo/: pom.xml
examples/src-layout-demo/: pyproject.toml
examples/ts-demo/: package.json
specs/001-intelligent-doc-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-architectural-diff/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-context-bridge/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-interactive-explorer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-source-root-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/codeatlas/: __init__.py  api.py  cli.py  config.py
tests/golden/: conftest.py  corpus.py  test_api_pages.py  test_baseline_json.py  test_call_flow.py  test_class_diagram.py  test_explorer_golden.py  test_package_deps.py  test_pr_comment.py  test_repomap_golden.py  test_report_json.py  test_src_layout_golden.py
tests/integration/: conftest.py  test_architecture_view.py  test_build_explorer.py  test_build_python.py  test_call_graphs.py  test_changelog.py  test_check_mode.py  test_determinism.py  test_diff_cli.py  test_export_cli.py  test_extra_nav.py  test_gate_baseline.py  test_generated_dirs_ignored.py  test_health.py  test_mcp_server.py  test_monorepo_build.py  test_no_network.py  test_performance.py  test_serve.py  test_src_layout_build.py  test_watcher.py
tests/unit/: test_arch_delta.py  test_architecture.py  test_baseline.py  test_call_resolution.py  test_check.py  test_class_neighborhood.py  test_config.py  test_dashboard.py  test_deadcode.py  test_emit.py  test_entrypoints.py  test_graph.py  test_graphview.py  test_impact.py  test_import_root.py  test_invalidate.py  test_ir.py  test_java_analyzer.py  test_js_analyzer.py  test_layout.py  test_mcp_tools.py  test_metrics.py  test_monorepo.py  test_patterns.py  test_repomap.py  (+7 more)
(+162 files in other folders)
